trained on compressed dataset (own), good loss curves

--- a/classifier_transferLearning.ipynb
+++ b/classifier_transferLearning.ipynb
@@ -137,7 +137,7 @@
     "    def __init__(self, root, transform=None, n_augmentations=3):\n",
     "        self.dataset = ImageFolder(root, transform=transform)\n",
     "        self.n_augmentations = n_augmentations\n",
-    "        self.rand_augment = v2.RandAugment(num_ops=2, magnitude=9)\n",
+    "        self.rand_augment = v2.RandAugment()\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.dataset) * (self.n_augmentations + 1)\n",
