added vehicle_classifier.py module

--- a/classifier_class.ipynb
+++ b/classifier_class.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing modular Vehicle Classifier code\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,12 +106,56 @@
        "'1_two wheeler'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "pred = classifier.predict(cv_image)\n",
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Successful class for Vehicle Classifier\n",
+    "\n",
+    "- using this class in Vehicle_classifier.py and importing it to test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vehicle_classifier import VehicleClassifier\n",
+    "import cv2\n",
+    "\n",
+    "model_path = \"data/saved_models/modelv3_3OP.pth\"\n",
+    "classifier = VehicleClassifier(model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0_no wheeler'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_image = cv2.imread(\"data/test_images/1.jpg\")\n",
     "pred = classifier.predict(cv_image)\n",
     "pred"
    ]
