updated class initializing pipeline

--- a/classifier_class.ipynb
+++ b/classifier_class.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,12 @@
     "        weightsv3 = models.MobileNet_V3_Large_Weights.DEFAULT\n",
     "        self.modelv3 = models.mobilenet_v3_large(weights=weightsv3).to(self.device)\n",
     "        self.auto_transform = weightsv3.transforms()\n",
-    "        self.class_names = [\"0_no wheeler\", \"1_two wheeler\", \"2_four wheeler\"]\n",
+    "        # self.class_names = [\"0_no wheeler\", \"1_two wheeler\", \"2_four wheeler\"]\n",
     "\n",
     "        # Freezing the final classifier layer\n",
     "        for param in self.modelv3.features.parameters():\n",
     "            param.requires_grad = False\n",
-    "        output_shape = len(self.class_names)\n",
+    "        output_shape = 3\n",
     "\n",
     "        # Recreate the classifier layer and seed it to the target device\n",
     "        self.modelv3.classifier = nn.Sequential(\n",
@@ -75,7 +75,10 @@
     "        with torch.inference_mode():\n",
     "            output = self.modelv3(image)\n",
     "            _, predicted = torch.max(output, 1)\n",
-    "        return self.class_names[predicted.item()]\n",
+    "        pred_array = [-1, 0, 1]  # -1:no wheeler, 0: two wheeler, 1: four wheeler\n",
+    "        prediction = pred_array[predicted.item()]\n",
+    "        prediction\n",
+    "        return prediction\n",
     "\n",
     "    def get_auto_transform(self):\n",
     "        return self.auto_transform\n",
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,37 +100,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1_two wheeler'"
+       "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred = classifier.predict(cv_image)\n",
-    "pred"
+    "pred  # -1:no wheeler, 0: two wheeler, 1: four wheeler"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Successful class for Vehicle Classifier\n",
+    "### Example of class call:\n",
     "\n",
     "- using this class in Vehicle_classifier.py and importing it to test\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +152,7 @@
        "'0_no wheeler'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
